--- a/app/assets/stylesheets/articles.css
+++ b/app/assets/stylesheets/articles.css
@@ -3,15 +3,28 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-
+  
 }
+
+
 body {
-  font-family: sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+}
+.main {
+  background: #dd3366;
+  margin: 100px -10px -10px -10px;
+ 
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  
+
 }
 .index {
   height: 400px;
   width: 100%;
-  background: #009999 url('IMG_4103.JPG') bottom right;
+  background: #009999 url('IMG_4103.JPG') top center;
   position: absolute;
   top: -10px;
   left: -10px;
@@ -28,13 +41,13 @@ body {
   margin: 50px auto 0 auto;
   text-align: center;
   line-height: 150%;
-  font-family: serif;
+  font-family: Palatino, "New York", serif;
   font-weight: 100;
 }
 .button {
   width: 85px;
   height: 40px;
-  background-color: green;
+  background-color: #3377dd;
   border-radius: 10px;
   position: fixed;
   top: 8px;
@@ -63,21 +76,33 @@ body {
 }
 .links {
   text-decoration: none;
-  border-bottom: 1px solid #dddddd;
   margin-bottom: 20px;
+  text-align: center;
 }
 .content {
   line-height: 120%;
   font-size: 16px;
 }
 footer {
-  position: relative;
-  bottom: -10px;
-  left: -100px;
-  text-align: center;
-  padding-top: 20px;
-  width: 120%;
+  position: absolute;
+  width: 100%;
   height: 100px;
   background-color: #dddddd;
-
+}
+form {
+  margin: 0 auto;
+}
+.simple_form_for {
+ 
+}
+.form-control {
+  width: 500px;
+  border: 2px solid #dddddd;
+}
+.text {
+  height: 300px;
+  font-size: 16px;
+}
+.form {
+  width: 500px;
 }
