--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar">
-   <a href='articles/new'>New Post</a>
-  </nav>
   <%= flash[:alert] %>
   <%= flash[:danger] %>
   <%= yield %>
-  <footer>Copyright</footer>
+  <footer>About Contact @ 2015 Jongmin's Travel Blog</footer>
 </body>
 </html>
