--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,7 @@
 
 <h2><%= @article.title %></h2><br />
 <div class="image">
-    <%= image_tag @article.image_url(:thumb).to_s %>
+    <%= image_tag @article.image_url(:thumb) %>
   </div>
 <%= @article.content %>
 <h3>New Comment</h3>
