--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <div class="main">
 <h1>Welcome to My Blog</h1>
-<%= link_to "Visit my blog", articles_path %>
+<%= link_to "Visit my blog", articles_path %><br />
+<%= link_to "Sign Up", new_user_path %>
 </div>
