--- a/app/assets/stylesheets/articles.css
+++ b/app/assets/stylesheets/articles.css
@@ -11,34 +11,45 @@ body {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
 }
 .main {
-  background: #dd3366;
-  margin: 100px -10px -10px -10px;
  
-  position: absolute;
-  width: 100%;
-  height: 100%;
-
-  
-
 }
+.main h1 {
+  padding: 100px 0 100px 0;
+}
+
+
+/* navigation bar */
+
+#navbar {
+  margin: -10px -10px; 
+  height: 60px;
+  background-color: #009999;
+  opacity: 0.4;
+}
+.menu {
+  margin-left: 90%;
+}
+#navbar .menu-link {
+  color: black;
+  text-decoration: none;
+}
+
+
 .index {
+  margin: 0 -10px 100px -10px;
   height: 400px;
-  width: 100%;
-  background: #009999 url('IMG_4103.JPG') top center;
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  right: -10px;
+  background-color: #009999;
   color: #ffffff;
 }
 .index h1 {
-  margin-top: 150px;
+  margin-top: 6px;
+  padding-top: 100px;
   text-align: center;
   font-size: 40px;
 }
 .index p {
   width: 35%;
-  margin: 50px auto 0 auto;
+  margin: 50px auto 100px auto;
   text-align: center;
   line-height: 150%;
   font-family: Palatino, "New York", serif;
@@ -47,11 +58,12 @@ body {
 .button {
   width: 85px;
   height: 40px;
-  background-color: #3377dd;
+  background-color: #0099cc;
   border-radius: 10px;
   position: fixed;
   top: 8px;
   left: 6px;
+  color: white;
 }
 .index a {
   color: #aaaaaa;
@@ -60,13 +72,13 @@ body {
   left: 13px;
   text-decoration: none;
 }
-.index a:hover {
-  color: orange;
+.button:hover {
+  color: black;
+  background-color: red;
 }
 #big_container {
-  margin: 0 auto;
+  margin: 100px auto;
   width: 500px;
-  margin-top: 450px;
 }
 .container {
   text-align: center;
@@ -78,14 +90,13 @@ body {
   text-decoration: none;
   margin-bottom: 20px;
   text-align: center;
+  color: #555555;
 }
 .content {
   line-height: 120%;
   font-size: 16px;
 }
 footer {
-  position: absolute;
-  width: 100%;
   height: 100px;
   background-color: #dddddd;
 }
@@ -106,3 +117,20 @@ form {
 .form {
   width: 500px;
 }
+.login {
+
+}
+.link {
+  margin-left: 20px;
+}
+.login-link {
+  text-decoration: none;
+}
+.title {
+  margin-left: 20px;
+}
+
+
+
+
+
