--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,10 +2,10 @@
 <h1>Sign Up</h1>
 
 <%= simple_form_for @user do |f| %>
-  <%= f.input :name %>
-  <%= f.input :email %>
-  <%= f.input :password %>
-  <%= f.input :password_confirmation %>
-  <%= f.button :submit %>
+  <%= f.input :name %><br />
+  <%= f.input :email %><br />
+  <%= f.input :password %><br />
+  <%= f.input :password_confirmation %><br />
+  <%= f.button :submit %><br />
 <% end %>
 </div>
