--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,19 +1,21 @@
 <div class="main">
-  <div class="title">
-    <h1>Welcome to My Blog</h1>
-  </div>
-  <div class="link">
-    <%= link_to "Visit my blog", articles_path, class: 'login-link' %><br />
-    
-  </div>
-  <div class="login">
-
+  <div class="login-box">
+     <div class="login">
     <%= simple_form_for (:session) do |f| %>
     <%# not sure about (:session) %>
       <%= f.input :email %>
       <%= f.input :password %>
-      <%= f.button :submit, 'Log In' %> 
+      <%= f.button :submit, 'Log In', class: 'login-button' %> <%=   %> <%= link_to "Sign Up", new_user_path, class: 'signup-link' %> 
     <% end %>
-    <%= link_to "Sign Up", new_user_path, class: 'login-link' %>
+ 
   </div>
+  </div>
+  <div class="title">
+    <h1>Welcome to My Blog</h1>
+  </div>
+
+  <div class="visit-link">
+    <%= link_to "Visit my blog", articles_path, class: 'visit-link' %><br />
+  </div>
+ 
 </div>
