--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,8 +1,8 @@
-<%= simple_form_for @article, html: {class: 'form'} do |f| %>
+<%= simple_form_for [@blog, @article], html: {class: 'form'} do |f| %>
     <%= f.input :title %><br />
     <%= f.input :content %><br />
     <%= f.label :image %><br />
     <%= f.file_field :image %><br />
     <%= f.button :submit, 'Creat a Post' %><br />
 <% end %>
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Back', blog_articles_path(@blog) %>
