--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,9 @@
 <div class="index">
-   <div class="button"><a href='articles/new'>New Post</a></div>
-   <h1>This is Jongmin's Travel Blog!</h1>
-   <p>This is the first Rails application Jongmin created on his own. The purpose of this blog is to practice Ruby on Rails and HTML/CSS skills. The blog includes pictures and travel stories. You can leave comments on each post. Hope you enjoy it.</p>
+   <div class="button">
+    <%= link_to 'New Post', new_blog_article_path(@blog, @article) %>
+   </div>  
+   <h1><%= @blog.title %></h1>
+   <p><%= @blog.description %></p>
 </div>
 
 <div id="big_container">
@@ -21,10 +23,9 @@
     <%= article.content %><br />
   </div> 
   <div class="container">
-  <%= link_to 'Edit', edit_article_path(article), class: 'links' %> |
-  <%= link_to 'Delete', article_path(article), class: 'links', method: :delete, data: { confirm: 'Are you sure?'} %> |
-  <%= link_to pluralize(article.comments.count, 'comment'), article_comments_path(article), class: 'links' %> |
-  <%= link_to 'New comment', new_article_comment_path(article), class: 'links' %>
+  <%= link_to 'Edit', edit_blog_article_path(@blog, article), class: 'links' %> |
+  <%= link_to 'Delete', blog_article_path(@blog, article), class: 'links', method: :delete, data: { confirm: 'Are you sure?'} %> 
+  
   <br /><br />
   </div>
   </div>
