--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
       <% end %>
     </section>
   </nav>
+ <div class="message"><br>
   <%= flash[:alert] %>
   <%= flash[:danger] %>
+  </div>
   <%= yield %>
   <footer>
     <p>
@@ -25,5 +27,6 @@
       @2015 Jongmin's Travel Blog
     </p>
   </footer>
+  <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
