--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,11 +2,15 @@
    <div class="button">
     <%= link_to 'New Post', new_blog_article_path(@blog, @article) %>
    </div>  
+   <div class="message">
+    <%= flash[:alert] %>
+    <%= flash[:danger] %>
+   </div>
    <h1><%= @blog.title %></h1>
    <p><%= @blog.description %></p>
 </div>
 
-<div id="big_container">
+<div class="big_container">
 <div class="container text-center">
   <h1>Stories</h1>
 </div>
