--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -1,4 +1,6 @@
-<h1>About Jongmin</h1>
+<div class="about">
+<h1>About Jongmin & this project</h1>
 
 
 <p>This is the first Rails application Jongmin created on his own. The purpose of this blog is to practice Ruby on Rails and HTML/CSS skills. The blog includes pictures and travel stories. You can leave comments on each post. Hope you enjoy it.</p>
+</div>
