--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,11 @@
 <div class="main">
+  <div class="message">
+    <%= flash[:alert] %>
+    <%= flash[:danger] %>
+   </div>
   <h1 class="main-page-heading">Create Your Own Blog!</h1>
   <div class="browser">
+    <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div>
     <div class="window">
       <div class="www">
         <p>www.boiling-castle-2832.herokuapp.com</p>
@@ -10,13 +15,14 @@
           <div class='mini-logo'>Blog</div>
         </div>
         <div class="mini-main">
-          <div class='message'><br>Jongmin's Blog!</div>
+          <div><br>Jongmin's Blog!</div>
           <div class="mini-content">Welcome to Jongmin's Travel Blog!</div>
         </div>
-        <div class-"mini-story">
-        <br>
+        <div class="mini-story">
+          <div class="mini-title">Diego Rivera's National Palace Mural 03/28/15</div>
           <%= image_tag("mini-pic.png", alt: "Example image", width: '150', height: '100', class: 'example-image') %>
         </div>
+          <div class="mini-content2">Today, I visited National Palace near the Zocalo square in Mexico City. In the palace, there were many interesting murals painted by the famous Mexican artist </div>
       </div>
     </div>
   </div>
