--- a/app/assets/stylesheets/articles.css
+++ b/app/assets/stylesheets/articles.css
@@ -16,8 +16,8 @@ body {
   font-size: 45px;
 }
 .main .main-page-heading {
-  margin: 40px auto;
-  padding-top: 0;
+  margin: 0 auto 30px auto;
+  padding-top: ;
   margin-left: 6%;
 }
 .login-box {
@@ -44,7 +44,8 @@ body {
   color: #ff0000;
 }
 .menu {
-  margin-left: 80%;
+  position: absolute;
+  right: 5%;
 }
 #navbar .menu-link {
   position: relative;
@@ -65,8 +66,7 @@ body {
 .search-box {
   margin-top: 20px;
   width: 250px;
-  height: 60px;
-  font-size: 40px;
+  
 
 }
 .browser {
@@ -176,14 +176,17 @@ body {
 
 }
 .message {
- margin-left: 15px;
- margin-top: 10px; 
- padding-top: 10px;
+  position: absolute;
+  top: 30px;
+  left: 10px;
+  
+}
+.with-flash {
+  position: relative;
 }
 
-
 .index {
-  margin: 0 -10px 100px -10px;
+  margin: 10px -10px 50px -10px;
   height: 400px;
   background-color: #009999;
   color: #ffffff;
@@ -207,9 +210,8 @@ body {
   height: 40px;
   background-color: #0099cc;
   border-radius: 10px;
-  position: fixed;
-  top: 8px;
-  left: 6px;
+  position: relative;
+  
 }
 .index a {
   color: #aaaaaa;
@@ -222,7 +224,7 @@ body {
   background-color: #ffdd22;
 }
 .big_container {
-  margin: 100px auto;
+  margin: 50px auto;
   width: 500px;
   word-wrap: break-word;
 }
@@ -231,6 +233,9 @@ body {
 } 
 .image {
   margin: 15px 0;
+}
+.picture {
+  border-radius: 5px;
 }
 .links {
   text-decoration: none;
@@ -306,5 +311,11 @@ form {
   width: 600px;
   word-wrap: break-word;
 }
-
+/* Responsive Design */
+@media screen and (max-width: 850px) {
+  #navbar .menu-link {  
+    top: 20px;
+    font-size: 1.125em;
+  }
+}
 
