--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,13 @@
 <div class="index">
-   <div class="button">
-    <%= link_to 'New Post', new_blog_article_path(@blog, @article) %>
-   </div>  
-   <div class="message">
-    <%= flash[:alert] %>
-    <%= flash[:danger] %>
-   </div>
    <h1><%= @blog.title %></h1>
-   <p><%= @blog.description %></p>
+   <p><%= @blog.description %></p> 
 </div>
 
 <div class="big_container">
 <div class="container text-center">
-  <h1>Stories</h1>
+<div class="button">
+  <%= link_to 'New Post', new_blog_article_path(@blog) %>
+</div>
 </div>
 <% @articles.each do |article| %>
   <div class="article">
@@ -21,15 +16,16 @@
     <%= article.created_at.strftime("%m/%d/%y") %><br />
   </div>
   <div class="container image">
-    <%= image_tag article.image_url(:thumb) %>
+    <a href=""><%= image_tag article.image_url(:thumb), class: 'picture' %></a>
   </div>
   <div class="container content">
     <%= article.content %><br />
   </div> 
   <div class="container">
   <%= link_to 'Edit', edit_blog_article_path(@blog, article), class: 'links' %> |
-  <%= link_to 'Delete', blog_article_path(@blog, article), class: 'links', method: :delete, data: { confirm: 'Are you sure?'} %> 
-  
+  <%= link_to 'Delete', blog_article_path(@blog, article), class: 'links', method: :delete, data: { confirm: 'Are you sure?'} %> |
+  <%= link_to "#{pluralize(article.comments.count,'Comment')}", blog_article_comments_path(@blog, article), class: 'links' %> |
+  <%= link_to 'New Comment', new_blog_article_comment_path(@blog, article), class: 'links' %>
   <br /><br />
   </div>
   </div>
