--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,12 +1,14 @@
+<div class="big_container">
 <h2><%= @article.title %></h2><br />
  <div class="image">
-    <%= image_tag @article.image_url(:thumb) %>
+    <%= image_tag @article.image_url(:thumb), class: 'picture' %>
   </div>
 <%= @article.content %>
 <h3>Comments</h3>
 <% @article.comments.each do |comment| %>
   <%= comment.created_at.strftime("%m/%d/%y") %><br />
-  Commenter: <%= comment.commenter %><br />
-  Comment: <%= comment.body %><br /><br />
+  <%= comment.commenter %> says, <br />
+  "<%= comment.body %>"<br /><br />
 <% end %>
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Back', '#' %>
+</div>
