--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,14 +1,17 @@
-
+<div class="big_container">
+<h1>Leave a Comment</h1>
 <h2><%= @article.title %></h2><br />
 <div class="image">
-    <%= image_tag @article.image_url(:thumb) %>
+    <%= image_tag @article.image_url(:thumb), class: 'picture' %>
   </div>
 <%= @article.content %>
 <h3>New Comment</h3>
-<%= simple_form_for [@article, @article.comments.build] do |f| %> 
-  <%= f.input :commenter %>
-  <%= f.input :body %>
+<%= simple_form_for [@blog, @article, @comment] do |f| %> 
+  <%= f.input :commenter, :as => :hidden, :input_html => { :value => @user.name } %>
+  <%= @user.name %> : 
+  <%= f.text_field :body, class: 'form-control' %>
   <%= f.button :submit, 'Submit a Comment' %>
 <% end %>
 
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Back', '#' %>
+</div>
