--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -1,1 +1,20 @@
 <h1>Contact</h1>
+<p>Email: kjm830528@gmail.com</p>
+
+<form action="/contact" method="post">
+  <div>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="user_name" />
+  </div>
+  <div>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="user_email" />
+  </div>
+  <div>
+    <label for="msg">Message:</label>
+    <textarea id="msg" name="user_message"></textarea>
+  </div>
+  <div class="example-button">
+    <button type="submit">Send your message</button>
+  </div>
+</form>
