--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -10,5 +10,5 @@
   <%= comment.commenter %> says, <br />
   "<%= comment.body %>"<br /><br />
 <% end %>
-<%= link_to 'Back', '#' %>
+<%= link_to 'Back', blog_articles_path(@blog) %>
 </div>
